# STRATEGIE

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dopis_Marti_AI_3_5_2026_vecer.txt  Email_Michal_DNS_Mikrotik_v2.txt  README.md  alembic_core.ini  alembic_data.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0b17fe4ece42_add_identity_and_user_id_to_audit.py  e2674820ff91_create_audit_log.py
alembic_core/: env.py
alembic_core/versions/: 1c4a719fb407_add_audit_log_to_css_db.py  387373d46505_initial_css_db_schema.py  51d998664f6b_add_gender_to_users.py  7f3a2c9b1e84_add_last_active_project_to_users.py  a1c8f9e2d3b4_add_password_hash_to_users.py  a7b8c9d0e1f2_add_display_identifier_to_channels.py  b2d9e0f4e5c7_add_password_reset_tokens.py  b8c9d0e1f2a3_add_user_ews_fields.py  c2e8b4f1a93d_add_description_to_personas.py  c9a0d1e2f3b4_add_trust_rating_and_parent.py  d1f9a3e8b521_identity_refactor_v2.py  d2e7c4a9f1b3_add_persona_avatar.py  d3a4b5c6e7f8_add_is_admin_and_dev_mode.py  d5a9b2f3c71e_add_default_persona_to_projects.py  e1a2b3c4d5f6_add_persona_phone_number.py  e4b5c6d7a8f9_persona_signature.py  f1b2c3d4e5f6_audit_log_extension.py  f2b3a4c5d6e7_add_persona_channels.py  f5c6d7e8a9b0_persona_channels_last_fetch_at.py  g6d7e8f9a0b1_persona_allowed_project_ids.py
alembic_data/: env.py
alembic_data/versions/: 1fc458d6fba2_initial_data_db_schema.py  2474a5913b41_add_pending_actions.py  a0b1c2d3e4f5_conversation_notes.py  a3b4c5d6e7f8_sms_outbox_persona_id.py  a4b5c6d7e8f9_add_sms_inbox_and_calls.py  a9b8c7d6e5f4_add_auto_send_consents.py  b1c2d3e4f5a6_kustod_project_triage.py  b4c5d6e7f8a9_forget_requests.py  b5c6d7e8f0a1_add_tasks_and_sms_processed_at.py  b6c7d8e9f0a1_add_llm_calls.py  c2d3e4f5a6b7_lifecycle_states.py  c3d1a82e7f90_add_dm_chat.py  c5d6e7f8a9b0_messages_tool_blocks.py  c7d8e9f0a1b2_llm_calls_tenant_user_persona_cost.py  c9e5d7f1a8b3_add_rag_vector_support.py  d4e5f6a7b8c9_documents_storage_only.py  d6e7f8a9b0c1_email_outbox_reply_fields.py  d7a1b2c3e4f5_add_email_inbox.py  d8b2c3d4e5f6_add_email_outbox.py  d8e9f0a1b2c3_orchestrate_priority_score.py  e0a1b2c3d4e5_media_files.py  e5f6a7b8c9d0_user_document_selections.py  e96501c4baa8_add_is_archived_to_conversations.py  e9c3d4e5f6a7_add_thoughts.py  e9f0a1b2c3d4_sms_is_personal.py  f0b1c2d3e4a5_add_marti_questions.py  f1c2d3e4a5b6_thought_vectors.py  f2d3e4a5b6c7_retrieval_feedback.py  f3a2b1c8d7e9_add_sms_outbox.py  f6a7b8c9d0e1_email_inbox_deleted_at.py  g7b8c9d0e1f2_activity_log_and_pending_notifications.py  h8c9d0e1f2a3_conversation_persona_mode.py  i9d0e1f2a3b4_phase18_cross_db_fks.py  i9d0e1f2a3b4_phase18_merge_core.py.draft  j0e1f2a3b4c5_phase19c_kustod_autonomy.py  k1f2a3b4c5d6_persona_personal_icon.py  l2g3h4i5j6k7_conversation_parent_id.py  m3h4i5j6k7l8_pack_overlays.py  n4i5j6k7l8m9_phase24_md_pyramida.py  o5j6k7l8m9n0_user_emoji_palette.py  (+10 more)
apps/api/: main.py
core/: config.py  crypto.py  database.py  database_core.py  database_data.py  database_legacy.py  logging.py
docs/: CLAUDE_TECH.md  dopis_marti_ai_phase19b_iterace_2.md  dopis_marti_ai_phase19b_iterace_3.md  dopis_marti_ai_phase19b_konzultace.md  identity_refactor_v2.md  marti_memory_design.md  memory_rag.md  modules.md  multimedia.md  phase15_agentic_context.md  phase18_db_consolidation_plan.md  phase24_consultation_letter.md  phase24_plan.md  phase24a_implementation_log.md  phase24b_implementation_log.md  phase24c_implementation_log.md  phase24d_implementation_log.md  phase24f_implementation_log.md  phase24g_implementation_log.md  phase25_cloud_mirror_plan.md  phase27c_consultation_letter.md  phase27d_consultation_letter.md  phase27d_plus1_ocr_consultation.md  phase27e_consultation_letter.md  phase27h_consultation_letter.md  phase27h_klarka_context.md  phase28_eurosoft_consultation_letter.md  phase28_eurosoft_mcp_deploy.md  phase28_followup_letter_to_marti_ai.md  phase29_multimailbox_consultation_letter.md  phase31_klid.md  sms_setup.md  strategie_erp.md
docs/db_ec_schema/: EC_3Dtisk_Kategorie.md  EC_3Dtisk_Material.md  EC_3Dtisk_Modely.md  EC_3Dtisk_fronta.md  EC_ArchivDokumZakazka.md  EC_AsynchProceduryStatus.md  EC_AutZprDefHlav.md  EC_AutZprDefMailFilter.md  EC_AutZprDefPol.md  EC_AutZprDefPol_XML.md  EC_AutZprDokladHlav.md  EC_AutZprDokladPol.md  EC_Banka_ParovaniTyp.md  EC_Banka_ParovaniVypisu.md  EC_Banka_uhrady_temp.md  EC_BrigadniciSeznam.md  EC_CaroveKody.md  EC_CashFlow.md  EC_CenaMedi.md  EC_CenikyMJ.md  EC_CenikyNabidkyProVazbyObj.md  EC_CenikyPorovnani.md  EC_CenikySkupiny.md  EC_CenikyTXT.md  EC_CenikyTXTHlav.md  EC_CenikyTxtVzorce.md  EC_CenikyTxtVzorcePar.md  EC_CenikyVazby.md  EC_CentralaMenu.md  EC_CentralaMenuUziv.md  EC_CestovniPrikazy.md  EC_ChybyProcedur.md  EC_CiselnaRada.md  EC_ContrDenik.md  EC_ContrDenikPredpis.md  EC_ContrFinPlan.md  EC_ContrFinPlanVazby.md  EC_ContrFinPredpis.md  EC_ContrFinPredpisTyp.md  EC_ContrKontaD.md  (+615 more)
modules/eurosoft_mcp/: __init__.py  (+7 more)
scripts/: _diag_conversations.py  _marti_ai_prompt_backup_20260422_060911.txt  _marti_ai_prompt_backup_20260422_063739.txt  backfill_conversation_titles.py  backfill_welcome_pozval.py  backup_dbs.ps1  dev.ps1  email_fetcher.ps1  email_fetcher.py  install_eurosoft_mcp_on_ec_server2.ps1  lifecycle_daily.py  list_users.py  llm_calls_retention.py  question_generator.ps1  question_generator.py  register_lifecycle_daily_task.ps1  register_llm_calls_retention_task.ps1  repair_orphan_users.py  reset_db.py  run_retention.ps1  seed.py  seed_first_user.py  set_initial_passwords.py  start_all.ps1  task_worker.ps1  task_worker.py  update_marti_persona.py
shared/: czech.py
strategie/: .env.example  README.md
(+132 files in other folders)
