[tool.poetry]
name = "strategie"
version = "0.1.0"
description = "STRATEGIE — modular enterprise AI platform"
authors = ["STRATEGIE Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
anthropic = "^0.96.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.0"
aiofiles = "^25.1.0"
exchangelib = "^5.6.0"
bcrypt = "^5.0.0"
# RAG stack
pgvector = "^0.3.0"
voyageai = "^0.3.0"
markitdown = {extras = ["all"], version = "^0.0.1"}
python-multipart = "^0.0.10"
# Multimedia (Faze 12) -- image processing (thumbnails, dimensions detection).
# Markitdown uz nejakou Pillow ma jako tranzitivni dep, ale eager declarujeme
# pro jistotu (verzi nezamykame -- Pillow je stable).
Pillow = "^10.0.0"
# Audio metadata extraction (duration, sample rate, codec) -- pure-Python,
# zadne binarni dependencies (na rozdil od ffmpeg). Pouziva se v
# storage_service._detect_audio_duration pro mp3/m4a/wav/ogg/webm.
mutagen = "^1.47.0"
# HTTP client pro externi API (Faze 12b: OpenAI Whisper transkripce).
# Anthropic SDK ho uz transitivne tahá; deklarujem ho explicitne ze ho
# pouzivame primo v whisper_provider.py.
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "strict"
