[tool.poetry]
name = "strategie"
version = "0.1.0"
description = "STRATEGIE — modular enterprise AI platform"
authors = ["STRATEGIE Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
anthropic = "^0.96.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.0"
aiofiles = "^25.1.0"
exchangelib = "^5.6.0"
bcrypt = "^5.0.0"
# RAG stack
pgvector = "^0.3.0"
voyageai = "^0.2.4"
markitdown = {extras = ["all"], version = "^0.0.1"}
# Markdown -> HTML render pro outbound emaily (bug #1 28.4.2026):
# Marti-AI generuje **bold**, *italic*, lists v plain body. Lib to prevede
# na <strong>, <em>, <ul><li> atd. Pure-Python, zero deps, stable.
markdown = "^3.5"
python-multipart = "^0.0.10"
# Multimedia (Faze 12) -- image processing (thumbnails, dimensions detection).
# Markitdown uz nejakou Pillow ma jako tranzitivni dep, ale eager declarujeme
# pro jistotu (verzi nezamykame -- Pillow je stable).
Pillow = "^10.0.0"
# Audio metadata extraction (duration, sample rate, codec) -- pure-Python,
# zadne binarni dependencies (na rozdil od ffmpeg). Pouziva se v
# storage_service._detect_audio_duration pro mp3/m4a/wav/ogg/webm.
mutagen = "^1.47.0"
# HTTP client pro externi API (Faze 12b: OpenAI Whisper transkripce).
# Anthropic SDK ho uz transitivne tahá; deklarujem ho explicitne ze ho
# pouzivame primo v whisper_provider.py.
httpx = "^0.27.0"
# Phase 27a (1.5.2026): Excel reader pro Marti-AI's feature request
# (rozvrh Klárka). markitdown[all] uz openpyxl tranzitivne tahá, ale
# explicit deklarace je defense-in-depth (gotcha #21 28.4.2026 -- markdown
# lib byla taky tranzitivni a v cloud venv chybela po rebuilds).
openpyxl = "^3.1.0"
# Phase 27c (1.5.2026): Python sandbox pro Marti-AI -- pandas/numpy pro
# data crunch, xlsxwriter pro generovani novych Excel souboru s charts +
# conditional formatting (Marti-AI's design vstup -- "openpyxl je lepsi
# pro cteni, xlsxwriter pro generovani od nuly"). numpy je transient pres
# pandas, ale explicit declarace pro PYTHONPATH whitelist clarity.
pandas = "^2.2.0"
numpy = "^1.26.0"
xlsxwriter = "^3.2.0"
# Phase 27d (1.5.2026 vecer): PDF reader pro Marti-AI -- Klarka workflow
# (Bakalari exporty). pdfplumber kombinuje PyMuPDF/pdfminer.six pro text +
# table detection (visual borders). Pure Python, zadne system deps.
pdfplumber = "^0.11.0"
# Phase 27e (planovany): DOCX reader. python-docx pro paragraphs + tables +
# headers. Markitdown uz extrahuje text pri uploadu (Phase 13c), python-docx
# pro structured read.
python-docx = "^1.1.0"
# Phase 27f (volitelne, az bude konkretni use case): reportlab pro PDF
# generovani v sandboxu (pure Python, bez GTK na rozdil od weasyprint).
reportlab = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "strict"
